--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -1,12 +1,8 @@
 name: SonarCloud Analysis
 
 on:
-  workflow_dispatch:
-    inputs:
-      sonar_token:
-        description: 'SonarCloud Token'
-        required: true
-        type: string
+  push:
+    branches: [ main, dev ]
 
 jobs:
   sonarqube:
@@ -26,8 +22,6 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          pip install pytest pytest-cov
-
       - name: Run tests and generate coverage report
         run: |
           pytest --cov=src --cov=worker --cov-report=xml
@@ -35,5 +29,5 @@ jobs:
       - name: Run SonarCloud analysis
         uses: SonarSource/sonarcloud-github-action@v2
         env:
-          SONAR_TOKEN: ${{ github.event.inputs.sonar_token }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: https://sonarcloud.io
