--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -8,6 +8,21 @@ jobs:
   sonarqube:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:15
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: root
+          POSTGRES_DB: ANB
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 5s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -25,6 +40,17 @@ jobs:
       - name: Run tests and generate coverage report
         run: |
           pytest --cov=src --cov=worker --cov-report=xml
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..10}; do
+            if pg_isready -h localhost -p 5432 -U postgres; then
+              echo "[>] PostgreSQL is ready!""
+              break
+            fi
+            echo "Waiting for PostgreSQL..."
+            sleep 3
+          done
 
       - name: Run SonarCloud analysis
         uses: SonarSource/sonarcloud-github-action@v2
