--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -45,7 +45,7 @@ jobs:
         run: |
           for i in {1..10}; do
             if pg_isready -h localhost -p 5432 -U postgres; then
-              echo "[>] PostgreSQL is ready!""
+              echo "[>] PostgreSQL is ready!"
               break
             fi
             echo "Waiting for PostgreSQL..."
