--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -23,12 +23,26 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
+      postgres-sonar:
+        image: postgres:15
+        ports:
+          - 5433:5432
+        env:
+          POSTGRES_USER: admin
+          POSTGRES_PASSWORD: admin
+          POSTGRES_DB: sonar
+        options: >-
+          --health-cmd "pg_isready -U admin"
+          --health-interval 5s
+          --health-timeout 5s
+          --health-retries 5
+
       sonarqube:
         image: sonarqube:community
         ports:
           - 9000:9000
         env:
-          SONAR_JDBC_URL: jdbc:postgresql://postgres:5432/sonar
+          SONAR_JDBC_URL: jdbc:postgresql://postgres:5433/sonar
           SONAR_JDBC_USERNAME: postgres
           SONAR_JDBC_PASSWORD: root
         options: >-
@@ -62,11 +76,6 @@ jobs:
             echo "Waiting for PostgreSQL..."
             sleep 3
           done
-
-      - name: Create SonarQube database
-        run: |
-          PGPASSWORD=root psql -h localhost -U postgres -c "CREATE DATABASE sonar;"
-          echo "[>] Database 'sonar' created for SonarQube."
 
       - name: Run tests and generate coverage report
         run: |
