--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -42,9 +42,9 @@ jobs:
         ports:
           - 9000:9000
         env:
-          SONAR_JDBC_URL: jdbc:postgresql://postgres:5433/sonar
-          SONAR_JDBC_USERNAME: postgres
-          SONAR_JDBC_PASSWORD: root
+          SONAR_JDBC_URL: jdbc:postgresql://postgres-sonar:5432/sonar
+          SONAR_JDBC_USERNAME: admin
+          SONAR_JDBC_PASSWORD: admin
         options: >-
           --health-cmd "curl -f http://localhost:9000/api/system/health || exit 1"
           --health-interval 10s
