--- a/.github/workflows/continuos_integration_pipeline.yaml
+++ b/.github/workflows/continuos_integration_pipeline.yaml
@@ -68,6 +68,42 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: https://sonarcloud.io
 
+  build-app:
+    name: Build FastAPI Application
+    runs-on: ubuntu-latest
+    needs: sonarqube
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install build tools
+        run: |
+          pip install --upgrade pip
+          pip install build setuptools wheel
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+
+      - name: Build FastAPI application artifact
+        run: |
+          echo "[>] Building FastAPI app..."
+          python -m build --wheel --sdist
+          echo "[>] Build completed. Listing dist/ content:"
+          ls -lh dist/
+
+      - name: Upload application artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: fastapi-app-artifact
+          path: dist/
+
   api-tests:
     runs-on: ubuntu-latest
 
