--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,4 +1,50 @@
 services:
+  test:
+      build:
+        context: .
+        dockerfile: ./Dockerfile
+      container_name: anb_tests
+      command: pytest -v tests --cov=src --cov=worker --cov-report=term-missing --cov-report=xml
+      environment:
+        DATABASE_URL: postgresql://postgres:root@db:5432/ANB
+        REDIS_URL: redis://redis:6379/0
+        PYTHONPATH: /app
+      depends_on:
+        db:
+          condition: service_healthy
+        redis:
+          condition: service_started
+      networks:
+        - backend
+      volumes:
+        - ./videos/unprocessed-videos:/app/videos/unprocessed-videos
+        - ./videos/processed-videos:/app/videos/processed-videos
+        - ./tests:/app/tests       
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    extra_hosts:
+      - "localhost:host-gateway"
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=123456
+    depends_on:
+      - prometheus
+    volumes:
+      - grafana_data:/var/lib/grafana
+
+
   db:
     image: postgres:17.4
     container_name: postgres_anb_db
@@ -7,24 +53,89 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: ANB
     networks:
-      - default
+      - backend
     ports:
       - "5432:5432"
     volumes:
       - pg-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:latest
     container_name: redis_anb
     networks:
-      - default
+      - backend
     ports:
       - "6379:6379"
 
+  app:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    container_name: anb_fastapi_back
+    networks:
+      - backend
+    expose:
+      - "80"
+    ports:
+      - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    restart: on-failure:5
+    environment:
+      DATABASE_URL: postgresql://postgres:root@db:5432/ANB
+      REDIS_URL: redis://redis:6379/0
+    volumes:
+      - ./videos/unprocessed-videos:/app/videos/unprocessed-videos
+      - ./videos/processed-videos:/app/videos/processed-videos
+
+  worker:
+    build:
+      context: .
+      dockerfile: ./Dockerfile.worker
+    container_name: anb_celery_worker
+    ports:
+      - "9000:9000"
+    networks:
+      - backend
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    restart: on-failure:5
+    environment:
+      DATABASE_URL: postgresql://postgres:root@db:5432/ANB
+      REDIS_URL: redis://redis:6379/0
+    volumes:
+      - ./videos/unprocessed-videos:/app/videos/unprocessed-videos
+      - ./videos/processed-videos:/app/videos/processed-videos
+
+  nginx:
+    image: nginx:latest
+    container_name: anb_nginx_proxy
+    depends_on:
+      - app
+    ports:
+      - "80:80"
+    networks:
+      - backend
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    restart: unless-stopped
+
 networks:
-  default:
+  backend:
     driver: bridge
 
 volumes:
   pg-data:
     driver: local
+  grafana_data:
