Move Dockerfiles to their own folder

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -2,7 +2,7 @@ services:
   test:
       build:
         context: .
-        dockerfile: ./Dockerfile
+        dockerfile: ./Docker/Dockerfile.api
       container_name: anb_tests
       command: pytest -v tests --cov=src --cov=worker --cov-report=term-missing --cov-report=xml
       environment:
@@ -75,7 +75,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ./Docker/Dockerfile.api
     container_name: anb_fastapi_back
     networks:
       - backend
@@ -99,7 +99,7 @@ services:
   worker:
     build:
       context: .
-      dockerfile: ./Dockerfile.worker
+      dockerfile: ./Docker/Dockerfile.worker
     container_name: anb_celery_worker
     ports:
       - "9000:9000"
