--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -1,18 +1,18 @@
-# First stage: base environment
+# Base image
 FROM python:3.11-alpine AS base
 
 ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
+# Dependencies
 RUN apk add --no-cache ffmpeg
 
 COPY ./requirements.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Second stage: development environment
-FROM base AS development
+# Application
+FROM base AS production
 
 WORKDIR /app
 
@@ -20,6 +20,4 @@ COPY ./src ./src
 COPY ./worker ./worker
 COPY ./videos/nba-rs-normalized.mp4 ./videos/nba-rs-normalized.mp4
 
-EXPOSE 9000
-
-CMD ["celery", "-A", "worker.video_processor_task", "worker", "--loglevel=info", "-P", "solo"]
+CMD ["python", "-m", "worker.video_processor_task"]
